objects/vlocity_cmt__QuoteLineItemAdPlacement__c.object
<CustomObject>
    <description>The Media Plan Placement is an extension to the Quote LineItem and captures the details specific to an Ad Placement.</description>
    <fields>
        <fullName>vlocity_cmt__AdBleedAmountUom__c</fullName>
        <description>Bleed height and width measure.</description>
        <label>Ad Bleed Amount Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pixels</fullName>
                </value>
                <value>
                    <fullName>mm</fullName>
                </value>
                <value>
                    <fullName>Inches</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AdBleedAmount__c</fullName>
        <description>This captures the distance from the edge.</description>
        <label>Ad Bleed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AdCreativeSizeTypes__c</fullName>
        <description>Semi colon separated User selected Creative SizeTypes from the possible choices presented by each Ad Space.</description>
        <label>Ad Creative SizeTypes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AdCreativeUrl__c</fullName>
        <description>URL to the Ad Creative. It may or may not hosted by Salesforce platform.</description>
        <label>Ad Creative URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AdPlacementPriorityType__c</fullName>
        <description>This will be chosen from the Ad Server&apos;s Allowed Ad Priority Type values.
example : STANDARD, PRICE_PRIORITY</description>
        <label>AdPlacement Priority Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AdRequestedEndDate__c</fullName>
        <description>This captures the Requested End Date for the LineItem.</description>
        <label>Ad Requested End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AdRequestedStartDate__c</fullName>
        <description>This captures the Requested Start Date for the Placement.</description>
        <label>Ad Requested Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AdSpaceSpecificationAdServer__c</fullName>
        <description>This field refer to the Ad Space Specification record&apos;s Ad Server.</description>
        <formula>vlocity_cmt__AdSpaceSpecificationId__r.vlocity_cmt__AdServerId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ad Server</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AdSpaceSpecificationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Ad Space Specification record.</description>
        <label>AdSpace Specification</label>
        <referenceTo>vlocity_cmt__AdSpaceSpecification__c</referenceTo>
        <relationshipLabel>Media Plan Placements</relationshipLabel>
        <relationshipName>QuoteLineItemAdPlacements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AdSpaceSpecificationMediaProperty__c</fullName>
        <description>This refers to the Media Property of the Ad Space Specification record.</description>
        <formula>vlocity_cmt__AdSpaceSpecificationId__r.vlocity_cmt__MediaPropertyId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Media Property</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AdSpaceSpecificationType__c</fullName>
        <description>This refers to the Ad Space Type fo the Ad Space Specification record.</description>
        <formula>TEXT(vlocity_cmt__AdSpaceSpecificationId__r.vlocity_cmt__AdSpaceType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ad Space Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AdTimePerEpisode__c</fullName>
        <description>Captures the commercial time (in seconds) for each installment or episode.</description>
        <label>Ad Time Per Episode</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BonusAdTime__c</fullName>
        <description>Represents the duration (in seconds) of additional, unpaid commercials.</description>
        <label>Bonus Ad Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CoreId__c</fullName>
        <description>Displays the ID of the core object created when migrating custom data.</description>
        <label>Core Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CostPerRatingPoint__c</fullName>
        <description>Calculates the Cost Per Rating Point by dividing the Implied Rate of the Order Line Item by the Audience size rating of the Ad Space specification.</description>
        <label>Cost Per Rating Point</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CustomerDayPart__c</fullName>
        <description>Captures the advertiser&apos;s preferred day time for the ad placement according to target audience and program content.</description>
        <label>Customer Day Part</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prime Time</fullName>
                </value>
                <value>
                    <fullName>Non Prime Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GrossRatingPoint__c</fullName>
        <description>Calculates the Gross Rating Point by multiplying the Audience Size Rating of the Ad Space specification by the paid Commercial Time per Linear Commercial Time Slot Unit.</description>
        <label>Gross Rating Point</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ImpliedRate__c</fullName>
        <description>The Implied rate is used by publishers to organise the revenue structure within the deal. This value is often internal to the publisher organisation and not customer facing.</description>
        <label>Implied Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ImpliedTotal__c</fullName>
        <description>The Implied Total is calculated from the Implied rate and is used by publishers to organise the revenue structure within the deal. This value is often internal to the publisher organisation and not customer facing.</description>
        <label>Implied Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsAdBleedEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Ad that extends all the way to the edge of the page on at least one side.</description>
        <label>Ad Bleed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MaximumFrequencyInterval__c</fullName>
        <description>Maximum Frequency Unit used for Frequency Capping.</description>
        <label>Maximum Frequency Interval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Second</fullName>
                </value>
                <value>
                    <fullName>Minute</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MaximumFrequency__c</fullName>
        <description>Maximum Number of times Ad will be served. This will used for Frequency Capping.</description>
        <label>Maximum Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MaximumUserFrequencyInterval__c</fullName>
        <description>Maximum User Frequency Interval.</description>
        <label>Maximum User Frequency Interval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Second</fullName>
                </value>
                <value>
                    <fullName>Minute</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MaximumUserFrequency__c</fullName>
        <description>The max number of times a unique user sees the Ad over a given time period.</description>
        <label>Maximum User Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MediaType__c</fullName>
        <description>This captures the Media Type of the Placement record.</description>
        <label>Media Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Outdoor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PaidAdTime__c</fullName>
        <description>Presents the total paid commercial duration (in seconds).</description>
        <label>Paid Ad Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteId__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Media Plan Placements</relationshipLabel>
        <relationshipName>QuoteLineItemAdPlacements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteLineItemId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Quote Line Item</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Media Plan Placements</relationshipLabel>
        <relationshipName>QuoteLineItemAdPlacements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteLineItemOneTimeCharge__c</fullName>
        <description>This refers to the One Time Charge of the Quote LineItem record.</description>
        <formula>vlocity_cmt__QuoteLineItemId__r.vlocity_cmt__OneTimeCharge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One Time Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteLineItemOneTimeTotal__c</fullName>
        <description>This refers to the One Time Total of the Quote LineItem record.</description>
        <formula>vlocity_cmt__QuoteLineItemId__r.vlocity_cmt__OneTimeTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One Time Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteLineItemProductCode__c</fullName>
        <description>This captures the Product Code of the Quote LineItem&apos;s Product.</description>
        <formula>vlocity_cmt__QuoteLineItemId__r.Product2.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteLineItemQuantity__c</fullName>
        <description>This refers to the Quantity of the Quote LineItem record.</description>
        <formula>vlocity_cmt__QuoteLineItemId__r.Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SponsorshipType__c</fullName>
        <description>Captures the Advertiser&apos;s Sponsorship Type for the Placement.</description>
        <label>Sponsorship Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Presented By</fullName>
                </value>
                <value>
                    <fullName>Co Presented By</fullName>
                </value>
                <value>
                    <fullName>Sponsored By</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TargetingParameters__c</fullName>
        <description>Ad Creative Targeting Parameters stored in JSON format.</description>
        <label>Targeting Parameters</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TotalAdTime__c</fullName>
        <description>Captures the total paid and bonus commercial time (in seconds) for the placement.</description>
        <label>Total Ad Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UserEngagementGoalType__c</fullName>
        <description>This is a user engagement goal defined in terms of clicks, impressions, etc.</description>
        <label>User Engagement Goal Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UserEngagementGoalUnitType__c</fullName>
        <description>The Type of the User Engagement Goal Unit. Example : Daily, Lifetime etc.</description>
        <label>User Engagement Goal Unit Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UserEngagementGoalUnit__c</fullName>
        <description>This represents the number or percentage of impressions or clicks that will be reserved for the Ad Creative.</description>
        <label>User Engagement Goal Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Media Plan Placement</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__QuoteId__c</columns>
        <columns>vlocity_cmt__QuoteLineItemId__c</columns>
        <columns>vlocity_cmt__MediaType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Placement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media Plan Placements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>